modified test training file with score

--- a/test.ipynb
+++ b/test.ipynb
@@ -11,17 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating train split: 140 examples [00:00, 456.63 examples/s]\n",
+      "Generating train split: 147 examples [00:00, 3317.31 examples/s]\n",
       "e:\\ps_project_task\\research\\.venv\\lib\\site-packages\\huggingface_hub\\file_download.py:1142: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
       "  warnings.warn(\n",
-      "Map: 100%|██████████| 140/140 [00:00<00:00, 1046.02 examples/s]\n"
+      "Map: 100%|██████████| 147/147 [00:00<00:00, 1748.14 examples/s]\n"
      ]
     }
    ],
@@ -30,6 +30,7 @@
     "import pandas as pd\n",
     "from transformers import BertTokenizer, BertForSequenceClassification, Trainer, TrainingArguments\n",
     "\n",
+    "model_path = \"fine_tuned_bert_model\"\n",
     "# Load dataset \n",
     "data = pd.read_csv(\"intent_data.csv\")\n",
     "\n",
@@ -41,7 +42,8 @@
     "dataset = load_dataset('csv', data_files=\"encoded_intent_data.csv\", split='train')\n",
     "\n",
     "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
-    "\n",
+    "# Save the tokenizer along with the model\n",
+    "tokenizer.save_pretrained(model_path)\n",
     "\n",
     "def tokenize_function(examples):\n",
     "    return tokenizer(examples['query'], padding='max_length', truncation=True, max_length=128)\n",
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -76,127 +78,94 @@
      "text": [
       "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      " 33%|███▎      | 7/21 [06:32<13:04, 56.02s/it]\n",
-      "\n",
-      "\u001b[A\n",
-      "\n",
-      "\u001b[A\u001b[A                               \n",
       "                                              \n",
-      " 33%|███▎      | 7/21 [06:00<00:53,  3.83s/it]\n",
-      "\u001b[ACheckpoint destination directory ./results\\checkpoint-7 already exists and is non-empty.Saving will proceed but saved results may be invalid.\n"
+      " 33%|███▎      | 8/24 [00:34<00:55,  3.47s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eval_loss': 0.6006103754043579, 'eval_runtime': 2.1956, 'eval_samples_per_second': 12.298, 'eval_steps_per_second': 0.455, 'epoch': 1.0}\n"
+      "{'eval_loss': 0.5125638246536255, 'eval_runtime': 2.3045, 'eval_samples_per_second': 13.018, 'eval_steps_per_second': 0.434, 'epoch': 1.0}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      " 33%|███▎      | 7/21 [06:18<00:53,  3.83s/it] "
+      " 42%|████▏     | 10/24 [00:45<01:10,  5.03s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'loss': 0.632, 'learning_rate': 1.0476190476190477e-05, 'epoch': 1.43}\n"
+      "{'loss': 0.6132, 'learning_rate': 1.1666666666666668e-05, 'epoch': 1.25}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\u001b[A\n",
-      "\n",
-      "\u001b[A\u001b[A                               \n",
       "                                               \n",
-      " 33%|███▎      | 7/21 [06:36<00:53,  3.83s/it]\n",
-      "\u001b[ACheckpoint destination directory ./results\\checkpoint-14 already exists and is non-empty.Saving will proceed but saved results may be invalid.\n"
+      " 67%|██████▋   | 16/24 [01:11<00:28,  3.60s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eval_loss': 0.5553529262542725, 'eval_runtime': 2.1013, 'eval_samples_per_second': 12.849, 'eval_steps_per_second': 0.476, 'epoch': 2.0}\n"
+      "{'eval_loss': 0.4886522591114044, 'eval_runtime': 2.2312, 'eval_samples_per_second': 13.446, 'eval_steps_per_second': 0.448, 'epoch': 2.0}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      " 33%|███▎      | 7/21 [07:06<00:53,  3.83s/it] "
+      " 83%|████████▎ | 20/24 [01:31<00:18,  4.68s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'loss': 0.5605, 'learning_rate': 9.523809523809525e-07, 'epoch': 2.86}\n"
+      "{'loss': 0.5178, 'learning_rate': 3.3333333333333333e-06, 'epoch': 2.5}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\u001b[A\n",
-      "\n",
-      "\u001b[A\u001b[A                               \n",
       "                                               \n",
-      " 33%|███▎      | 7/21 [07:11<00:53,  3.83s/it]\n",
-      "\u001b[ACheckpoint destination directory ./results\\checkpoint-21 already exists and is non-empty.Saving will proceed but saved results may be invalid.\n"
+      "100%|██████████| 24/24 [01:48<00:00,  3.59s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eval_loss': 0.5232444405555725, 'eval_runtime': 2.051, 'eval_samples_per_second': 13.165, 'eval_steps_per_second': 0.488, 'epoch': 3.0}\n"
+      "{'eval_loss': 0.4822712242603302, 'eval_runtime': 2.2392, 'eval_samples_per_second': 13.398, 'eval_steps_per_second': 0.447, 'epoch': 3.0}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "100%|██████████| 21/21 [01:45<00:00,  5.04s/it]\n"
+      "100%|██████████| 24/24 [01:52<00:00,  4.69s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'train_runtime': 105.9181, 'train_samples_per_second': 3.031, 'train_steps_per_second': 0.198, 'train_loss': 0.595306260245187, 'epoch': 3.0}\n"
+      "{'train_runtime': 112.5599, 'train_samples_per_second': 3.118, 'train_steps_per_second': 0.213, 'train_loss': 0.5516497393449148, 'epoch': 3.0}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 334.15it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'eval_loss': 0.5232444405555725, 'eval_runtime': 2.066, 'eval_samples_per_second': 13.069, 'eval_steps_per_second': 0.484, 'epoch': 3.0}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "100%|██████████| 1/1 [00:00<00:00, 334.26it/s]\n"
      ]
     }
    ],
@@ -231,7 +200,7 @@
     "trainer.train()\n",
     "\n",
     "\n",
-    "trainer.save_model(\"fine_tuned_bert_model\")\n",
+    "trainer.save_model(model_path)\n",
     "\n",
     "# Evaluate \n",
     "results = trainer.evaluate()\n",
@@ -255,33 +224,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "e:\\ps_project_task\\research\\.venv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "e:\\ps_project_task\\research\\.venv\\lib\\site-packages\\transformers\\utils\\generic.py:441: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
-      "  _torch_pytree._register_pytree_node(\n",
-      "e:\\ps_project_task\\research\\.venv\\lib\\site-packages\\transformers\\utils\\generic.py:309: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
-      "  _torch_pytree._register_pytree_node(\n",
-      "e:\\ps_project_task\\research\\.venv\\lib\\site-packages\\transformers\\utils\\generic.py:309: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
-      "  _torch_pytree._register_pytree_node(\n",
-      "e:\\ps_project_task\\research\\.venv\\lib\\site-packages\\huggingface_hub\\file_download.py:1142: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import BertTokenizer, BertForSequenceClassification\n",
     "import torch\n",
     "\n",
     "# Load the fine-tuned model and tokenizer\n",
     "model = BertForSequenceClassification.from_pretrained(\"fine_tuned_bert_model\")  #aved model\n",
-    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')  # Use the same tokenizer you used for training\n",
+    "tokenizer = BertTokenizer.from_pretrained(\"fine_tuned_bert_model\")  # Use the same tokenizer you used for training\n",
     "\n",
     "def predict_intent(input_text):\n",
     "    # Tokenize the input\n",
@@ -309,28 +261,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Query: 'I want to add benificiary' is classified as 'informative'.\n"
+      "Query: 'I want new credit card' is classified as 'transactional'.\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "predict_intent(\"I want to add benificiary\")"
+    "predict_intent(\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query: 'I want to apply for credit card' is classified as 'transactional'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"I want to apply for credit card\"\n",
+    "predict_intent(query)"
+   ]
   },
   {
    "cell_type": "code",
@@ -398,27 +360,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "e:\\ps_project_task\\research\\.venv\\lib\\site-packages\\huggingface_hub\\file_download.py:1142: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import pandas as pd\n",
     "from transformers import BertTokenizer, BertForSequenceClassification\n",
     "import torch.nn.functional as F\n",
     "\n",
-    "\n",
-    "model = BertForSequenceClassification.from_pretrained(\"fine_tuned_bert_model\")  \n",
-    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')  \n",
+    "model_path = \"fine_tuned_bert_model\"\n",
+    "model = BertForSequenceClassification.from_pretrained(model_path)  \n",
+    "tokenizer = BertTokenizer.from_pretrained(model_path)  \n",
     "\n",
     "def preprocess_input(input_text,tokenizer):\n",
     "    # Tokenize the input\n",
@@ -479,15 +432,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model Prediction: transactional (Confidence: 0.5062)\n",
-      "Thank you for the feedback! TRANSACTIONAL Intent has been saved.\n"
+      "Model Prediction: transactional (Confidence: 0.5343)\n",
+      "Thank you for the feedback! As per feedback INFORMATIVE intent has been saved.\n"
      ]
     }
    ],
@@ -515,20 +468,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datasets import Dataset\n",
     "from transformers import Trainer, TrainingArguments, BertForSequenceClassification, BertTokenizer\n",
     "\n",
-    "def retrain_model_with_feedback(feedback_file=\"feedback_data.csv\"):\n",
+    "def retrain_model_with_feedback(feedback_file):\n",
+    "\n",
+    "    model_path = \"fine_tuned_BERT_model\"\n",
+    "\n",
     "    # Load feedback data\n",
     "    feedback_data = pd.read_csv(feedback_file)\n",
     "    \n",
     "    # Tokenize the new feedback data\n",
     "    tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
-    "    \n",
+    "    trainer.save_model(model_path)\n",
+    "\n",
     "    def tokenize_function(examples):\n",
     "        return tokenizer(examples['query'], padding=True, truncation=True, max_length=128)\n",
     "    \n",
@@ -536,7 +493,7 @@
     "    feedback_dataset = feedback_dataset.map(tokenize_function, batched=True)\n",
     "    \n",
     "    # Load your pre-trained model\n",
-    "    model = BertForSequenceClassification.from_pretrained(\"fine_tuned_bert_model\", num_labels=2)\n",
+    "    model = BertForSequenceClassification.from_pretrained(\"bert-base-uncased\", num_labels=2)\n",
     "    \n",
     "    # Define training arguments\n",
     "    training_args = TrainingArguments(\n",
@@ -564,7 +521,7 @@
     "    trainer.train()\n",
     "\n",
     "    # Save the updated model\n",
-    "    trainer.save_model(\"fine_tuned_bert_model\")\n"
+    "    trainer.save_model(model_path)\n"
    ]
   },
   {
